# Ticket-System-2024

./: CMakeLists.txt  README.md  main.cpp
BackEnd/: CMakeLists.txt  main.cpp
BackEnd/db/: bpt.hpp  database.hpp
BackEnd/lib/: array.hpp  constantLengthString.hpp  mytools.hpp
BackEnd/lib/STLite/: algorithm.hpp  map.hpp  utility.hpp  vector.hpp
BackEnd/lib/mytools/: mytools.cpp  mytools.hpp
BackEnd/src/: cmdprocessor.hpp  time.hpp  typebase.hpp
BackEnd/src/cmdprocessor/: cmdprocessor.cpp
BackEnd/src/order/: order.cpp  order.hpp
BackEnd/src/system/: system.cpp  system.hpp
BackEnd/src/time/: time.cpp  time.hpp
BackEnd/src/train/: train.cpp  train.hpp
BackEnd/src/user/: user.cpp  user.hpp
Document/: management_system.md
db/: bpt.hpp  database.hpp
lib/: constantLengthString.hpp
lib/STLite/: exceptions.hpp  list.hpp  set.hpp  utility.hpp  vector.hpp
lib/mytools/: mytools.cpp
src/: typebase.hpp
src/cmdprocessor/: cmdprocessor.cpp  cmdprocessor.hpp
src/time/: time.cpp
src/train/: train.cpp
src/user/: user.cpp  user.hpp
